--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@nuxtjs/auth-next": "5.0.0-1667386184.dfbbb54",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/pwa": "^3.3.5",
+    "bcryptjs": "^2.4.3",
     "core-js": "^3.15.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
     "nuxt": "^2.15.7",
+    "primeicons": "^6.0.1",
+    "primevue": "^2.10.1",
     "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
