--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/pwa": "^3.3.5",
     "bcryptjs": "^2.4.3",
+    "cookie-universal-nuxt": "^2.2.2",
     "core-js": "^3.15.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
