--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/pwa": "^3.3.5",
+    "@nuxtjs/router": "^1.5.1",
     "bcryptjs": "^2.4.3",
     "cookie-universal-nuxt": "^2.2.2",
     "core-js": "^3.15.1",
