--- a/package.json
+++ b/package.json
@@ -9,28 +9,19 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@nuxtjs/auth-next": "5.0.0-1667386184.dfbbb54",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/router": "^1.5.1",
-    "bcryptjs": "^2.4.3",
     "cookie-universal-nuxt": "^2.2.2",
     "core-js": "^3.15.1",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.7.2",
     "nuxt": "^2.15.7",
     "primeicons": "^6.0.1",
-    "primevue": "^2.10.1",
-    "vuedraggable": "^2.24.3"
+    "primevue": "^2.10.1"
   },
   "devDependencies": {
-    "@fortawesome/free-brands-svg-icons": "^6.2.1",
-    "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@nuxt/postcss8": "^1.1.3",
-    "@nuxtjs/fontawesome": "^1.1.2",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "tailwind-scrollbar": "^2.0.1",
